fix: updated styles to fix layout bugs

--- a/assets/styles/hero.css
+++ b/assets/styles/hero.css
@@ -9,7 +9,6 @@
 }
 
 .hero-title h1 { 
-    /* font-size: 3.5rem; */
     font-size: clamp(2rem, 1.2021rem + 3.4043vw, 3.5rem);
     font-weight: 700;
 }
@@ -38,7 +37,7 @@
     background-size: cover;
 
     width: 180px;
-    @media screen and (min-width: 1192px) {
+    @media screen and (min-width: 992px) {
         margin: unset;
         width: 243px;
         height: 243px;
