--- a/assets/styles/work.css
+++ b/assets/styles/work.css
@@ -14,7 +14,6 @@
     }
 }
 
-
 .work-item__img {
     background-repeat: no-repeat;
     background-position: center center;
@@ -28,7 +27,6 @@
     @media screen and (min-width:480px) {
         width: 250px;
         height: 200px;
-        margin: 0 auto;
     }
 
     @media screen and (min-width:768px) {
